# watermark-analysis

./: .gitignore  README.md  apply_new_adaptive_attack.py  calculate_performance_metrics.py  calculate_quailty_metrics.py  create_test_dataset.py  create_train_data_test.py  inspect_onnx_operations.py  parallel_performance.sh  parallel_quality.sh  prompts_generator.py  pyproject.toml  test_decoding.py  test_metrics.ipynb  train_new_adaptive_attack.py  trw_perormance_metrics.py
attacks/: adv.py  adversial.py  distortion.py  regeneration.py
metrics/performance/: evasion_rate.py
metrics/quality/: distributional.py  image.py  perceptual.py
notebooks/: dataset_gen.ipynb  fft.ipynb  metrics_check.ipynb  postprocess.py  trw.ipynb
scripts/: apply_adaptive_attack.py  create_dataset.py  eval_performance.py  eval_quality.py  generate_prompts.py  inspect_onnx.py  parallel_performance.sh  parallel_quality.sh  train_adaptive_attack.py
src/watermark_analysis/: __init__.py  cli.py  config.py  datasets.py  io.py  prompts.py
src/watermark_analysis/attacks/: __init__.py  adversarial.py  base.py  distortion.py  regeneration.py  registry.py
src/watermark_analysis/metrics/: __init__.py  performance.py
src/watermark_analysis/watermarks/: __init__.py  base.py  dwt_dct.py  modified_sd_pipeline.py  post_processing_sd.py  registry.py  rivagan.py  stegastamp.py  trw.py  trw_stable_diffusion.py
watermarks/: DwtDct.py  DwtDctSvd.py  ModifiedStableDiffusionPipeline.py  PostProccessingWatermarksStableDiffusion.py  Rivagan.py  StegaStamp.py  Trw.py  TrwStableDiffusion.py
(+5 files in other folders)
